--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h3>Resume-<span class="muted">Tailored resumes for different roles</span></h3>
                 <div class="resume-grid">
                     <!-- Web Resume -->
-                    <a href="./Resume-Web-Developer.pdf" download class="resume-card">
+                    <a href="./Resume/WebDevResume.pdf" download class="resume-card">
                         <div class="resume-icon">🌐</div>
                         <div>
                             <h3>Web Developer</h3>
@@ -66,7 +66,7 @@
                     </a>
 
                     <!-- Game Resume -->
-                    <a href="./Resume-Game-Developer.pdf" download class="resume-card">
+                    <a href="./Resume/MyResume.pdf" download class="resume-card">
                         <div class="resume-icon">🎮</div>
                         <div>
                             <h3>Game Developer</h3>
