Project add Echolocal

--- a/index.html
+++ b/index.html
@@ -105,6 +105,66 @@
         <!-- Projects -->
         <section class="bento popUp" id="projects">
             <h2>Projects</h2>
+            <!-- Web Dev -->
+            <div class="popUp">
+                <h3 style="margin-top: 30px;">🕹️Web Development</h3>
+                <div class="projects">
+                    <div class="project-card">
+                        <img src="./Images/echolocal.png" alt="EchoLocal" />
+                        <div class="project-content">
+                            <h3>EchoLocal</h3>
+                            <p>EchoLocal is an anonymous, location-based chatroom platform designed for
+                                temporary,
+                                history-free conversations. It allows people within a nearby <b style="color: blue;">~5
+                                    km</b> radius to
+                                create and join
+                                short-lived chatrooms without accounts, profiles, or permanent data.<br>
+                                <a class="playNowLink" href="https://echo-local.vercel.app/">Visit Now</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="./Images/KamiNoto.png" alt="KamiNoto" />
+                        <div class="project-content">
+                            <h3>KamiNoto</h3>
+                            <p>Developed a full-stack note-taking app using MongoDB, Express, React, and Node.js. Built
+                                secure authentication, CRUD functionality for notes, category-based color tagging, and
+                                pinning features, with a focus on clean UI and smooth user experience.<br>
+                                <a class="playNowLink" href="https://kami-noto-8fhu.vercel.app">Visit Now</a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <img src="./Images/Zenkai.png" alt="Zenkai" />
+                        <div class="project-content">
+                            <h3>Zenkia – Social Media Web Application</h3>
+                            <p>A social media platform developed using PHP, HTML, and CSS, featuring user
+                                authentication, posts, likes, comments, follow system, and real-time-style
+                                notifications. Built as part of TECHPHILIA 8.0 Hackathon organized by Amity University
+                                Patna, with a focus on core social interaction features.<br>
+                                <a class="playNowLink" href="https://github.com/AniketKumar15/socialmedia">Source
+                                    Code</a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <img src="./Images/SpaceShooter.png" alt="Space Shooter" />
+                        <div class="project-content">
+                            <h3>Space Shooter Game – Browser-Based Game</h3>
+                            <p>A fast-paced browser-based space shooter built using JavaScript and Kaboom.js.
+                                Implemented enemy spawning, responsive player controls, collision detection, and scoring
+                                systems, with support for both keyboard (PC) and touch input (mobile). Focused on smooth
+                                animations and real-time gameplay interaction.<br>
+                                <a class="playNowLink" href="https://aniketkumar15.github.io/Space-Shooter-Game/">Play
+                                    Now</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
             <div class="popUp">
                 <h3>🕹️Game Development - <span><a href="https://bright-moon-bm.itch.io/">More Projects</a></span></h3>
                 <div class="projects">
@@ -116,7 +176,7 @@
                                 Built in 72 hours for BYOG Game Jam 2025, the game challenges players to protect their
                                 tower by typing on-screen words to eliminate incoming enemies.
                                 Accuracy is critical — every typo damages the tower, turning speed and precision into
-                                the core survival mechanic.
+                                the core survival mechanic.<br>
                                 <a class="playNowLink" href="https://bright-moon-bm.itch.io/type-and-defend">Play
                                     Now</a>
                             </p>
@@ -132,7 +192,7 @@
                                 Instead of avoiding danger, players must discover creative ways to die to escape a
                                 looping dream.
                                 Every death reshapes the world, introducing subtle changes, new hazards, and fresh
-                                puzzle solutions.
+                                puzzle solutions.<br>
                                 <a class="playNowLink" href="https://bright-moon-bm.itch.io/death-loop">Play Now</a>
                             </p>
                         </div>
@@ -145,54 +205,8 @@
                             <p>ShiftWalker is a 2D side-scrolling puzzle platformer built for AI Bootcamp with Nikhil
                                 Malankar(GameEon CEO) by Spawnskool, where
                                 players can shift between two parallel worlds to navigate through increasingly complex
-                                levels. The core mechanic explores the theme "One Mechanic, Many Worlds".
+                                levels. The core mechanic explores the theme "One Mechanic, Many Worlds"<br>
                                 <a class="playNowLink" href="https://bright-moon-bm.itch.io/shiftwalker">Play Now</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Web Dev -->
-            <div class="popUp">
-                <h3 style="margin-top: 30px;">🕹️Web Development</h3>
-                <div class="projects">
-                    <div class="project-card">
-                        <img src="./Images/KamiNoto.png" alt="KamiNoto" />
-                        <div class="project-content">
-                            <h3>KamiNoto</h3>
-                            <p>Developed a full-stack note-taking app using MongoDB, Express, React, and Node.js. Built
-                                secure authentication, CRUD functionality for notes, category-based color tagging, and
-                                pinning features, with a focus on clean UI and smooth user experience.
-                                <a class="playNowLink" href="https://kami-noto-8fhu.vercel.app">Visit Now</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <img src="./Images/Zenkai.png" alt="Zenkai" />
-                        <div class="project-content">
-                            <h3>Zenkia – Social Media Web Application</h3>
-                            <p>A social media platform developed using PHP, HTML, and CSS, featuring user
-                                authentication, posts, likes, comments, follow system, and real-time-style
-                                notifications. Built as part of TECHPHILIA 8.0 Hackathon organized by Amity University
-                                Patna, with a focus on core social interaction features.
-                                <a class="playNowLink" href="https://github.com/AniketKumar15/socialmedia">Source
-                                    Code</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <img src="./Images/SpaceShooter.png" alt="Space Shooter" />
-                        <div class="project-content">
-                            <h3>Space Shooter Game – Browser-Based Game</h3>
-                            <p>A fast-paced browser-based space shooter built using JavaScript and Kaboom.js.
-                                Implemented enemy spawning, responsive player controls, collision detection, and scoring
-                                systems, with support for both keyboard (PC) and touch input (mobile). Focused on smooth
-                                animations and real-time gameplay interaction
-                                <a class="playNowLink" href="https://aniketkumar15.github.io/Space-Shooter-Game/">Play
-                                    Now</a>
                             </p>
                         </div>
                     </div>
