Improve the skills

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="grid-3">
             <div class="bento popUp span-2">
                 <h1>Aniket Kumar</h1>
-                <p>Game Developer & Full‑Stack Web Developer</p>
+                <p>Game Developer(Programmer) & Full‑Stack Web Developer</p>
             </div>
             <div>
                 <h2>Follow Me</h2>
@@ -57,7 +57,7 @@
                 <h3>Resume-<span class="muted">Tailored resumes for different roles</span></h3>
                 <div class="resume-grid">
                     <!-- Web Resume -->
-                    <a href="./Resume/Aniket_MernStack_Resume.pdf" download class="resume-card">
+                    <a href="./Resume/AniketResume_FullStack.pdf" download class="resume-card">
                         <div class="resume-icon">🌐</div>
                         <div>
                             <h3>Web Developer</h3>
@@ -66,7 +66,7 @@
                     </a>
 
                     <!-- Game Resume -->
-                    <a href="./Resume/MyResume.pdf" download class="resume-card">
+                    <a href="./Resume/AniketResumeGameDev.pdf" download class="resume-card">
                         <div class="resume-icon">🎮</div>
                         <div>
                             <h3>Game Developer</h3>
@@ -85,7 +85,13 @@
             <div class="grid-3">
                 <div>
                     <h3>Game Development</h3>
-                    <div class="tags"><span>Unity</span><span>C#</span></div>
+                    <div class="tags">
+                        <span>Unity Engine</span>
+                        <span>C# Programming</span>
+                        <span>Gameplay Programming</span>
+                        <span>Enemy AI & State Machines</span>
+                        <span>Player Controllers & Combat</span>
+                    </div>
                 </div>
                 <div>
                     <h3>Web Development</h3>
@@ -103,68 +109,8 @@
         </section>
 
         <!-- Projects -->
-        <section class="bento popUp" id="projects">
+        <section class="popUp" id="projects">
             <h2>Projects</h2>
-            <!-- Web Dev -->
-            <div class="popUp">
-                <h3 style="margin-top: 30px;">🕹️Web Development</h3>
-                <div class="projects">
-                    <div class="project-card">
-                        <img src="./Images/echolocal.png" alt="EchoLocal" />
-                        <div class="project-content">
-                            <h3>EchoLocal</h3>
-                            <p>EchoLocal is an anonymous, location-based chatroom platform designed for
-                                temporary,
-                                history-free conversations. It allows people within a nearby <b style="color: blue;">~5
-                                    km</b> radius to
-                                create and join
-                                short-lived chatrooms without accounts, profiles, or permanent data.<br>
-                                <a class="playNowLink" href="https://echo-local.vercel.app/">Visit Now</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="./Images/KamiNoto.png" alt="KamiNoto" />
-                        <div class="project-content">
-                            <h3>KamiNoto</h3>
-                            <p>Developed a full-stack note-taking app using MongoDB, Express, React, and Node.js. Built
-                                secure authentication, CRUD functionality for notes, category-based color tagging, and
-                                pinning features, with a focus on clean UI and smooth user experience.<br>
-                                <a class="playNowLink" href="https://kami-noto-8fhu.vercel.app">Visit Now</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <img src="./Images/Zenkai.png" alt="Zenkai" />
-                        <div class="project-content">
-                            <h3>Zenkia – Social Media Web Application</h3>
-                            <p>A social media platform developed using PHP, HTML, and CSS, featuring user
-                                authentication, posts, likes, comments, follow system, and real-time-style
-                                notifications. Built as part of TECHPHILIA 8.0 Hackathon organized by Amity University
-                                Patna, with a focus on core social interaction features.<br>
-                                <a class="playNowLink" href="https://github.com/AniketKumar15/socialmedia">Source
-                                    Code</a>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <img src="./Images/SpaceShooter.png" alt="Space Shooter" />
-                        <div class="project-content">
-                            <h3>Space Shooter Game – Browser-Based Game</h3>
-                            <p>A fast-paced browser-based space shooter built using JavaScript and Kaboom.js.
-                                Implemented enemy spawning, responsive player controls, collision detection, and scoring
-                                systems, with support for both keyboard (PC) and touch input (mobile). Focused on smooth
-                                animations and real-time gameplay interaction.<br>
-                                <a class="playNowLink" href="https://aniketkumar15.github.io/Space-Shooter-Game/">Play
-                                    Now</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br>
             <div class="popUp">
                 <h3>🕹️Game Development - <span><a href="https://bright-moon-bm.itch.io/">More Projects</a></span></h3>
                 <div class="projects">
@@ -212,6 +158,68 @@
                     </div>
                 </div>
             </div>
+            <br>
+            <!-- Web Dev -->
+            <div class="popUp">
+                <h3 style="margin-top: 30px;">🕹️Web Development</h3>
+                <div class="projects">
+                    <div class="project-card">
+                        <img src="./Images/echolocal.png" alt="EchoLocal" />
+                        <div class="project-content">
+                            <h3>EchoLocal</h3>
+                            <p>EchoLocal is an anonymous, location-based chatroom platform designed for
+                                temporary,
+                                history-free conversations. It allows people within a nearby <b style="color: blue;">~5
+                                    km</b> radius to
+                                create and join
+                                short-lived chatrooms without accounts, profiles, or permanent data.<br>
+                                <a class="playNowLink" href="https://echo-local.vercel.app/">Visit Now</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="./Images/KamiNoto.png" alt="KamiNoto" />
+                        <div class="project-content">
+                            <h3>KamiNoto</h3>
+                            <p>Developed a full-stack note-taking app using MongoDB, Express, React, and Node.js. Built
+                                secure authentication, CRUD functionality for notes, category-based color tagging, and
+                                pinning features, with a focus on clean UI and smooth user experience.<br>
+                                <a class="playNowLink" href="https://kami-noto-8fhu.vercel.app">Visit Now</a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <img src="./Images/Zenkai.png" alt="Zenkai" />
+                        <div class="project-content">
+                            <h3>Zenkia – Social Media Web Application</h3>
+                            <p>A social media platform developed using PHP, HTML, and CSS, featuring user
+                                authentication, posts, likes, comments, follow system, and real-time-style
+                                notifications. Built as part of TECHPHILIA 8.0 Hackathon organized by Amity University
+                                Patna, with a focus on core social interaction features.<br>
+                                <a class="playNowLink" href="https://github.com/AniketKumar15/socialmedia">Source
+                                    Code</a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- <div class="project-card">
+                        <img src="./Images/SpaceShooter.png" alt="Space Shooter" />
+                        <div class="project-content">
+                            <h3>Space Shooter Game – Browser-Based Game</h3>
+                            <p>A fast-paced browser-based space shooter built using JavaScript and Kaboom.js.
+                                Implemented enemy spawning, responsive player controls, collision detection, and scoring
+                                systems, with support for both keyboard (PC) and touch input (mobile). Focused on smooth
+                                animations and real-time gameplay interaction.<br>
+                                <a class="playNowLink" href="https://aniketkumar15.github.io/Space-Shooter-Game/">Play
+                                    Now</a>
+                            </p>
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+            <br>
+
         </section>
 
         <!-- Services -->
